tests/pass/first_example.jlite
class Main {
Void main(Int i, Int a, Int b,Int d){
while(true){
b = 340 ;
a = d;
}
return;
}
}
class Dummy {
Dummy j;
Int dummy() {
Int i;
Bool j;
return i ;
}
}