tests/fail/accent.jlite
class Hello {
    Void main() {
        éè();
    }
}